--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/funkybrain/bg-helper-cubalibre",
   "devDependencies": {
-    "babel-core": "^5.1.13",
+    "babel-core": "^5.2.9",
     "babel-eslint": "^3.0.1",
     "babel-loader": "^5.0.0",
+    "classname": "0.0.0",
+    "classnames": "^1.2.2",
     "css-loader": "^0.12.0",
     "eslint": "^0.20.0",
     "eslint-loader": "^0.11.1",
@@ -31,6 +33,7 @@
   },
   "dependencies": {
     "classnames": "^1.2.2",
+    "i": "^0.3.3",
     "normalize.css": "^3.0.3",
     "react": "^0.13.2",
     "reflux": "^0.2.7"
